<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:weightSum="1">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"

            android:textSize="18sp" />
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
             />
    </LinearLayout>

    <ExpandableListView android:id="@+id/gatt_services_list"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_weight="0.40" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.64">

        <Button
            android:text="Forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bPlay"
            android:layout_weight="0.08"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <Button
            android:text="Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bStop"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/background_light"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="Reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bFastForward"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/background_light"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
